--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src = "https://www.pexels.com/photo/close-up-of-cat-320014/"
+		alt = "Cat">
     <script type="text/javascript" src="./script.js">
 </script>
 
