--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src = "https://www.pexels.com/photo/close-up-of-cat-320014/"
+	<img src="C:\Users\Hp\Downloads\cat\cats.jpg"
 		alt = "Cat">
     <script type="text/javascript" src="./script.js">
 </script>
